Fixed Edit function and added onClickImage
Izmene u editu se cuvaju kao SharedPreference kako bi prilikom izbora slike(menja se aktivnost) podaci ostali sacuvani.
Klikom na sliku otvara se nova aktivnost koja prikazuje sliku u punoj velicini.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tijana.actorapplication">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -22,7 +22,8 @@
         <activity android:name=".activities.SecondActivity" />
         <activity android:name=".activities.DialogActivity" />
         <activity android:name=".activities.DialogMovieActivity" />
-        <activity android:name=".activities.PreferenceSettingsActivity"></activity>
+        <activity android:name=".activities.PreferenceSettingsActivity" />
+        <activity android:name=".activities.ImageActivity"></activity>
     </application>
 
 </manifest>
